[gd_scene load_steps=35 format=3 uid="uid://b3l46tvt2tevv"]

[ext_resource type="PackedScene" uid="uid://s731qn4j6ebs" path="res://models/pumpkin_hollow_full_modified.tscn" id="1_ctg6l"]
[ext_resource type="Script" path="res://testing_map.gd" id="1_eufwu"]
[ext_resource type="PackedScene" uid="uid://behm4qpk02k2s" path="res://models/pumpkin_hollow_pieces_modified.tscn" id="1_ov8g5"]
[ext_resource type="PackedScene" uid="uid://dyfbgqxg6rahm" path="res://addons/kaykit_halloween_bits/gltf/arch.gltf" id="4_j13nx"]
[ext_resource type="PackedScene" uid="uid://b5k7hj2q64bow" path="res://models/glove_left.glb" id="4_ma5p2"]
[ext_resource type="PackedScene" uid="uid://cb4uq6hr1k142" path="res://addons/kaykit_halloween_bits/gltf/fence.gltf" id="5_tewqk"]
[ext_resource type="PackedScene" uid="uid://djue7fbdwdrm1" path="res://addons/kaykit_halloween_bits/gltf/fence_broken.gltf" id="6_b2gdy"]
[ext_resource type="PackedScene" uid="uid://5p1nv0o6vop0" path="res://addons/kaykit_halloween_bits/gltf/post_lantern.gltf" id="7_usxdh"]
[ext_resource type="PackedScene" uid="uid://hj21vyhp78ye" path="res://addons/kaykit_halloween_bits/gltf/ribcage.gltf" id="11_153vq"]
[ext_resource type="PackedScene" uid="uid://c480uebuatosg" path="res://addons/kaykit_halloween_bits/gltf/shrine.gltf" id="12_qs6li"]
[ext_resource type="PackedScene" uid="uid://7c86jlto6a30" path="res://addons/kaykit_halloween_bits/gltf/skull_candle.gltf" id="13_0filk"]
[ext_resource type="PackedScene" uid="uid://hk1cf8csqdrt" path="res://addons/kaykit_halloween_bits/gltf/tree_dead_large.gltf" id="14_f5yfn"]
[ext_resource type="PackedScene" uid="uid://bko4ul30m4o85" path="res://addons/kaykit_halloween_bits/gltf/tree_dead_large_decorated.gltf" id="15_1otfv"]
[ext_resource type="PackedScene" uid="uid://b786amta6f16o" path="res://addons/kaykit_halloween_bits/gltf/tree_pine_orange_medium.gltf" id="16_oxlor"]
[ext_resource type="PackedScene" uid="uid://b7ha2rvbciet0" path="res://addons/kaykit_halloween_bits/gltf/tree_pine_yellow_medium.gltf" id="17_htd1c"]
[ext_resource type="PackedScene" uid="uid://qm4nhoeeteek" path="res://addons/kaykit_halloween_bits/gltf/grave_A_destroyed.gltf" id="18_rn3rq"]
[ext_resource type="PackedScene" uid="uid://blmw4vo6qqk7x" path="res://addons/kaykit_halloween_bits/gltf/grave_A.gltf" id="19_g6kes"]
[ext_resource type="PackedScene" uid="uid://dylag0xemlm0u" path="res://addons/kaykit_halloween_bits/gltf/lantern_standing.gltf" id="20_hqfyn"]
[ext_resource type="PackedScene" uid="uid://bwa3sitcos5hl" path="res://addons/kaykit_halloween_bits/gltf/path_A.gltf" id="21_efb33"]
[ext_resource type="PackedScene" uid="uid://c26sw1lcyjq8c" path="res://addons/kaykit_halloween_bits/gltf/path_B.gltf" id="22_1rlrd"]
[ext_resource type="PackedScene" uid="uid://r8n4sutnqcgl" path="res://addons/kaykit_halloween_bits/gltf/crypt.gltf" id="22_3r8pk"]
[ext_resource type="PackedScene" uid="uid://8fbwqjjsntq6" path="res://addons/kaykit_halloween_bits/gltf/path_C.gltf" id="23_iwc6b"]
[ext_resource type="PackedScene" uid="uid://c7h22vplc4yh3" path="res://addons/kaykit_halloween_bits/gltf/path_D.gltf" id="24_0n22y"]
[ext_resource type="AudioStream" uid="uid://coe3u25nkm6iv" path="res://art/Haunted Beats (1).mp3" id="24_66wh8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kntnh"]
sky_top_color = Color(0.586358, 0.168692, 0.91164, 1)
sky_horizon_color = Color(0.777201, 0.634734, 0.31145, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_albes"]
sky_material = SubResource("ProceduralSkyMaterial_kntnh")

[sub_resource type="Environment" id="Environment_2o5or"]
background_mode = 2
sky = SubResource("Sky_albes")
tonemap_mode = 2
glow_enabled = true
glow_normalized = true
glow_strength = 1.2
volumetric_fog_enabled = true
volumetric_fog_sky_affect = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wymq3"]
albedo_color = Color(0.403922, 0.278431, 0.14902, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_7ju6e"]
material = SubResource("StandardMaterial3D_wymq3")
size = Vector2(30, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_qk40o"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_2d5qd"]
size = Vector3(20, 20, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_6r6ng"]
radius = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_ekxpw"]
radius = 0.25

[sub_resource type="SphereMesh" id="SphereMesh_pqm76"]

[node name="testing map" type="Node"]
script = ExtResource("1_eufwu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2o5or")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0.438644, -0.417985, 0.795538, -0.239982, 0.798617, 0.551924, -1.15078, 0, 0)
shadow_enabled = true

[node name="FloorStaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="FloorStaticBody3D"]
mesh = SubResource("PlaneMesh_7ju6e")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FloorStaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_qk40o")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.771, 2.664)
fov = 70.0

[node name="pumpkin_hollow_full" parent="." groups=["pumpkins"] instance=ExtResource("1_ctg6l")]
transform = Transform3D(0.0959326, 0, -0.995388, 0, 1, 0, 0.995388, 0, 0.0959326, -1.26961, 1.08145, -2.11638)
broken_model = ExtResource("1_ov8g5")

[node name="pumpkin_hollow_full2" parent="." groups=["pumpkins"] instance=ExtResource("1_ctg6l")]
transform = Transform3D(0.0959326, 0, -0.995388, 0, 1, 0, 0.995388, 0, 0.0959326, 0.960844, 1.08145, -2.11638)
broken_model = ExtResource("1_ov8g5")

[node name="pumpkin_hollow_full3" parent="." groups=["pumpkins"] instance=ExtResource("1_ctg6l")]
transform = Transform3D(0.0959326, 0, -0.995388, 0, 1, 0, 0.995388, 0, 0.0959326, -0.0625553, 0.91448, -0.284467)
broken_model = ExtResource("1_ov8g5")

[node name="pumpkin_hollow_full4" parent="." groups=["pumpkins"] instance=ExtResource("1_ctg6l")]
transform = Transform3D(0.0959326, 0, -0.995388, 0, 1, 0, 0.995388, 0, 0.0959326, -1.18586, 1.08145, -5.71892)
broken_model = ExtResource("1_ov8g5")

[node name="pumpkin_hollow_full5" parent="." groups=["pumpkins"] instance=ExtResource("1_ctg6l")]
transform = Transform3D(0.0959326, 0, -0.995388, 0, 1, 0, 0.995388, 0, 0.0959326, 1.11298, 1.08145, -5.71892)
broken_model = ExtResource("1_ov8g5")

[node name="KillZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillZone"]
shape = SubResource("BoxShape3D_2d5qd")

[node name="Hand" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5127, 0.956079)

[node name="glove_left" parent="Hand" instance=ExtResource("4_ma5p2")]
transform = Transform3D(3, 0, 0, 0, -1.31134e-07, 3, 0, -3, -1.31134e-07, 0, 0, 0)

[node name="HandArea3D" type="Area3D" parent="Hand"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hand/HandArea3D"]
shape = SubResource("SphereShape3D_6r6ng")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hand"]
shape = SubResource("SphereShape3D_ekxpw")

[node name="Pointer" type="MeshInstance3D" parent="Hand"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_pqm76")
skeleton = NodePath("../..")

[node name="decoration" type="Node3D" parent="."]

[node name="arch2" parent="decoration" instance=ExtResource("4_j13nx")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -6.23)

[node name="fence2" parent="decoration" instance=ExtResource("5_tewqk")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -7.98572, -4.76837e-07, -6.2799)

[node name="fence3" parent="decoration" instance=ExtResource("5_tewqk")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 8.04825, -4.76837e-07, -6.2799)

[node name="fence_broken2" parent="decoration" instance=ExtResource("6_b2gdy")]
transform = Transform3D(0.093031, 0, -0.995663, 0, 1, 0, 0.995663, 0, 0.093031, -7.26844, 0, 10.7354)

[node name="post_lantern2" parent="decoration" instance=ExtResource("7_usxdh")]
transform = Transform3D(0.121488, 0, 0.992593, 0, 1, 0, -0.992593, 0, 0.121488, -6.51413, 0, 0.0212898)

[node name="ribcage2" parent="decoration" instance=ExtResource("11_153vq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58659, 0, -12.9529)

[node name="shrine2" parent="decoration" instance=ExtResource("12_qs6li")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.71024, 5.96046e-08, 1.02733)

[node name="skull_candle2" parent="decoration" instance=ExtResource("13_0filk")]
transform = Transform3D(0.898878, 0, -0.438199, -0.0560588, 0.991783, -0.114994, 0.434598, 0.12793, 0.891492, 6.69515, 2.38419e-07, 0.465373)

[node name="tree_dead_large2" parent="decoration" instance=ExtResource("14_f5yfn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.65917, 0, -1.56068)

[node name="tree_dead_large_decorated2" parent="decoration" instance=ExtResource("15_1otfv")]
transform = Transform3D(0.8991, 0, 0.437744, 0, 1, 0, -0.437744, 0, 0.8991, -6.76889, 0, -2.72284)

[node name="tree_pine_orange_medium2" parent="decoration" instance=ExtResource("16_oxlor")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 11.0334, 0, -13.1104)

[node name="tree_pine_orange_medium3" parent="decoration" instance=ExtResource("16_oxlor")]
transform = Transform3D(1.8, 0, 0, 0, 1.79965, -0.0356862, 0, 0.0356862, 1.79965, 6.28093, 0, -13.1104)

[node name="tree_pine_orange_medium4" parent="decoration" instance=ExtResource("16_oxlor")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -4.13127, 0, -13.1104)

[node name="tree_pine_orange_medium5" parent="decoration" instance=ExtResource("16_oxlor")]
transform = Transform3D(1.9997, 0.0345558, 0, -0.0345558, 1.9997, 0, 0, 0, 2, -11.0291, 0, -13.1104)

[node name="tree_pine_yellow_medium2" parent="decoration" instance=ExtResource("17_htd1c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.0253, -4.76837e-07, -3.29202)

[node name="grave_A_destroyed2" parent="decoration" instance=ExtResource("18_rn3rq")]
transform = Transform3D(0.972877, 0, 0.231323, 0, 1, 0, -0.231323, 0, 0.972877, -4.33817, 0, -3.09523)

[node name="grave_A_destroyed3" parent="decoration" instance=ExtResource("18_rn3rq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.25982, 0, -2.78313)

[node name="grave_A2" parent="decoration" instance=ExtResource("19_g6kes")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.60113, 0, -2.70661)

[node name="lantern_standing2" parent="decoration" instance=ExtResource("20_hqfyn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.92011, 9.53674e-07, -0.793134)

[node name="path_A2" parent="decoration" instance=ExtResource("21_efb33")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.05463, 0, -4.39782)

[node name="path_B2" parent="decoration" instance=ExtResource("22_1rlrd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.446246, 0, -3.56943)

[node name="path_C2" parent="decoration" instance=ExtResource("23_iwc6b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.51528, 0, -2.22108)

[node name="path_D2" parent="decoration" instance=ExtResource("24_0n22y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.51994, 0, -0.384281)

[node name="crypt2" parent="decoration" instance=ExtResource("22_3r8pk")]
transform = Transform3D(0.0153409, 0, 0.999882, 0, 1, 0, -0.999882, 0, 0.0153409, -10.1582, 0, 4.42366)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_66wh8")
autoplay = true
bus = &"MUSIC"

[connection signal="area_entered" from="KillZone" to="." method="_on_kill_zone_area_entered"]
[connection signal="area_exited" from="KillZone" to="." method="_on_kill_zone_area_exited"]
[connection signal="body_entered" from="Hand" to="." method="_on_hand_body_entered"]
[connection signal="area_entered" from="Hand/HandArea3D" to="." method="_on_hand_area_3d_area_entered"]
